--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h2 id="width">Width: <span></span></h2>
         <h2 id="height">Height: <span></span></h2>
     </div>
-    <script>
-        // Suerte !
+    <script src="app.js">
+    
     </script>
 </body>
 
